login and signup completed

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "server":"nodemon server.js"
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "stripe": "^17.3.1",
-    "validater": "^1.0.5"
+    "validator": "^13.12.0"
   }
 }
